z-index fix

--- a/src/styles/Places.css
+++ b/src/styles/Places.css
@@ -147,7 +147,7 @@ img {
   height: 100%;
 }
 .slider-heading {
-  z-index: 1000;
+  z-index: 5;
   width: 60%;
   height: 30%;
   font-size: 2.5rem;
